# list-submit

./: .gitignore  Cargo.toml  README.md  cli.py  config-template.toml  config.py  global_config.tomll  install.ps1  install.sh  list_api.py  main.py  out.py  requirements.txt  task.py  ui.py
.github/workflows/: release.yml  test.yml
detectors/: detector.py  java_detector.py  python_detector.py
list_api/: __init__.py  api.py  list_parser.py  live_list_api.py  mock_list_api.py  mock_list_api_failure.py  models.py
src/: args.rs  config.rs  detectors.rs  main.rs  ui.rs
src/list_api/: api.rs  mod.rs  models.rs  parser.rs  test.html
src/list_api/parser_test_data/: 12_submits_3_tests.html  courses_one_selected.html  no_tests.html  one_successful_test_result.html  problems_list.html  tests_two_finished.html  zero_submits.html
src/templates/: global-config.toml  project-config.toml
templates/: local-config.toml  project-config.toml
test/list_api/: test_list_parser.py  tests_one_unfinished.html
